# Zira

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  TESTING.md  install.sh  list.md  plan.md  ratchet.toml  rust-toolchain.toml  rustfmt.toml  spec.md
.github/workflows/: ci.yml
.ratchet/detectors/: MANIFEST
.ratchet/journal/: run-1781698529548.jsonl  run-1781702345367.jsonl  run-1781704130495.jsonl  run-1781707712003.jsonl  run-1781710501258.jsonl  run-1781713663927.jsonl  run-1781718998677.jsonl  run-1781721503149.jsonl  run-1781728290942.jsonl  run-1781738664486.jsonl  run-1781748728000.jsonl  run-1781754967728.jsonl  run-1781757812440.jsonl  run-1781762329916.jsonl  run-1781774480720.jsonl  run-1781800290046.jsonl  run-1781805867768.jsonl  run-1781822663510.jsonl  run-1781845729785.jsonl  run-1781850829713.jsonl  run-1781870070591.jsonl  run-1781880524728.jsonl
crates/zira/: Cargo.toml
crates/zira-avatar/: Cargo.toml
crates/zira-avatar/src/: lib.rs
crates/zira-bridge/: Cargo.toml
crates/zira-bridge/src/: brain.rs  lib.rs
crates/zira-config/: Cargo.toml
crates/zira-config/src/: constitution.txt  lib.rs
crates/zira-core/: Cargo.toml
crates/zira-core/src/: lib.rs  logging.rs  mock.rs
crates/zira-emotion/: Cargo.toml
crates/zira-emotion/src/: lib.rs
crates/zira-memory/: Cargo.toml
crates/zira-memory/src/: lib.rs
crates/zira-proto/: Cargo.toml
crates/zira-proto/src/: lib.rs
crates/zira-skills/: Cargo.toml
crates/zira-skills/src/: lib.rs
crates/zira-voice/: Cargo.toml
crates/zira-voice/src/: lib.rs  tts.rs  vad.rs  wake.rs
crates/zira/src/: main.rs
scripts/: fetch-models.sh
src/: lib.rs
tests/: append_audit.rs  append_episode.rs  audit_budget.rs  audit_entry_type.rs  avatar_driver.rs  avatar_errors.rs  avatar_state.rs  barge_in.rs  bridge_ask.rs  bridge_error_event.rs  bridge_errors.rs  bridge_invoke.rs  budget_error.rs  build_argv.rs  build_version.rs  candle_embedder.rs  cap_episodes.rs  clamp_weight.rs  claude_brain.rs  compose_prompt.rs  config_load.rs  config_paths.rs  config_schema.rs  config_validate.rs  consolidate_episodes.rs  constitution.rs  cosine_similarity.rs  default_emotion.rs  earshot_vad.rs  embedder_trait.rs  emotion_expression.rs  emotion_type.rs  episode_record.rs  event_bus.rs  event_type.rs  expression_preset.rs  fact_store_delete.rs  fact_store_error.rs  fact_store_get.rs  fact_store_open.rs  (+58 more)
