# The repo root is a hybrid [package] + [workspace] root: the [package] hosts and
# compiles the repo-root `tests/` (so `cargo test` at the root runs the scaffold
# tests), and the [workspace] binds the ten member crates under `crates/`.
[package]
name = "zira-build"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
resolver = "2"
members = [
    "crates/zira",
    "crates/zira-core",
    "crates/zira-bridge",
    "crates/zira-voice",
    "crates/zira-emotion",
    "crates/zira-avatar",
    "crates/zira-memory",
    "crates/zira-skills",
    "crates/zira-config",
    "crates/zira-proto",
]

# The shared dependency surface: the six core crates every member inherits via
# `{ workspace = true }`. Declared exactly once here so versions never drift per-crate.
[workspace.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "io-util", "process"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"

# The lint floor: clippy denies warnings workspace-wide. Each member opts in with
# `[lints] workspace = true`, so a clippy warning anywhere becomes a hard build error.
[workspace.lints.clippy]
all = "deny"

# Dev deps for repo-root integration tests.
[dev-dependencies]
zira-proto = { path = "crates/zira-proto" }
zira-config = { path = "crates/zira-config" }
zira-core = { path = "crates/zira-core" }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
toml = "0.8"

# The root test-host package inherits the same gate.
[lints]
workspace = true
