[package]
name = "zira-bridge"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
serde_json = { workspace = true }
thiserror = { workspace = true }
zira-config = { path = "../zira-config" }
zira-core = { path = "../zira-core" }
zira-emotion = { path = "../zira-emotion" }
zira-proto = { path = "../zira-proto" }

[lints]
workspace = true
